# gst-opencv

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.in  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
debian/: changelog  control  copyright  cron.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
examples/python/: facedetect.py  templatematch.py
m4/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  gstopencv.c
src/edgedetect/: Makefile  Makefile.in
src/pyramidsegment/: Makefile  Makefile.in
